<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonBg"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/tp_12">

        <TextView
            android:id="@+id/btn_text_view_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_text_view" />

        <TextView
            android:id="@+id/btn_image_view_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_image_view" />

        <TextView
            android:id="@+id/btn_list_view_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_list_view" />

        <TextView
            android:id="@+id/btn_tint_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_tint" />

        <TextView
            android:id="@+id/btn_dynamic_view_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_dynamic_view" />

        <TextView
            android:id="@+id/btn_third_part_list_view_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_third_part_list_view" />

        <TextView
            android:id="@+id/btn_custom_attr_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_custom_attr" />

        <TextView
            android:id="@+id/btn_skin_enable_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_skin_enable" />

        <TextView
            android:id="@+id/btn_festive_skin_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_festive_skin" />

        <TextView
            android:id="@+id/btn_dialog_demo"
            style="@style/BigBtn.PrimaryBg"
            android:layout_height="@dimen/tp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tp_12"
            android:paddingHorizontal="@dimen/tp_12"
            android:text="@string/main_btn_dialog" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>